--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="robots" content="noindex, nofollow" />
+    <meta name="robots" content="noindex, nofollow" />
     <title>Auto_Bangumi</title>
-    <script type="module" crossorigin src="./assets/index.1d3bc1da.js"></script>
-    <link rel="stylesheet" href="./assets/index.a6639e6c.css">
+    <script type="module" crossorigin src="./assets/index.97c47918.js"></script>
+    <link rel="stylesheet" href="./assets/style.0bf5ec83.css">
   </head>
   <body>
     <div id="app"></div>
