--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,12 +2,12 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
     <title>Auto_Bangumi</title>
-    <script type="module" crossorigin src="./assets/index.094ba2cb.js"></script>
-    <link rel="stylesheet" href="./assets/style.0bf5ec83.css">
+    <script type="module" crossorigin src="./assets/index-ce25b577.js"></script>
+    <link rel="stylesheet" href="./assets/style-12fd46bf.css">
   </head>
   <body>
     <div id="app"></div>
