--- a/backend/src/templates/index.html
+++ b/backend/src/templates/index.html
@@ -2,15 +2,15 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./favicon.svg" />
+    <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="noindex, nofollow" />
     <title>Auto_Bangumi</title>
-    <script type="module" crossorigin src="./assets/index-24be8593.js"></script>
-    <link rel="stylesheet" href="./assets/style-5151f112.css">
+    <link rel="stylesheet" href="/assets/style-3662dc62.css">
   </head>
   <body>
     <div id="app"></div>
+    <script crossorigin src="/assets/main-e2c7bde5.js"></script>
     
   </body>
 </html>
